<resources>

    <string name="app_name">Notapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="Bio">Bio</string>
    <string name="Name">Name</string>
    <string name="Branch">Branch</string>

    <string name="branch_prompt">Choose your branch</string>
    <string-array name="branch_array">
        <item>Computer Science and Engineering</item>
        <item>Information Technology</item>
        <item>Electronics</item>
        <item>Electrical</item>
        <item>Civil</item>
        <item>Mechanical</item>
    </string-array>
    
    <string name="class_prompt">Choose your class</string>
    <string name="Class">Class</string>
    <string-array name="class_array">
        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
        <item>Final Year</item>
    </string-array>
    <string name="title_activity_notices">NoticesActivity</string>
    <string name="help">Help</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="departments_preferences">Department Preferences</string>
    <string name="push_notification_preferences">Push Notification Preferences</string>

        <string name="title_activity_main_notice">MainNoticeActivity</string>
        <string name="title_activity_help">Help</string>
        <string name="title_activity_about">About</string>
        <string name="Help">    On Install, set your Branch, Class and Department preferences as well as Push Notification Preferences(can be changed later).
                To select preferences of Departments, just set the switches of the departments of your choices though Settings-> Department Preferences and restart the app. Notices of only selected departments would be received and even the start screen will show the same logos.
                If you don’t want push notifications for any department, just as Department Preferences , set your Push Notification Preferences through Settings->Push Notification Preferences.
Note: Only departments selected in Departments Preferences can be set in Push Notification Preferences.
            For any other grievances feel free to contact
            sarang@unitechstudios.com
            manish@unitechstudios.com</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
